Project2: display all preys when there is a collision with an obstacle

--- a/03 - Projects/Project2/game-oop-predator-prey/index.html
+++ b/03 - Projects/Project2/game-oop-predator-prey/index.html
@@ -18,6 +18,7 @@
   <script src="js/Prey.js"></script>
   <script src="js/script.js"></script>
   <script src="js/Obstacle.js"></script>
+  <script src="js/Decoration.js"></script>
 </head>
 
 <body>
