Project2: new Pond class that display when it rains

--- a/03 - Projects/Project2/game-oop-predator-prey/index.html
+++ b/03 - Projects/Project2/game-oop-predator-prey/index.html
@@ -19,6 +19,7 @@
   <script src="js/script.js"></script>
   <script src="js/Obstacle.js"></script>
   <script src="js/Decoration.js"></script>
+  <script src="js/Pond.js"></script>
 </head>
 
 <body>
