P3: NightSky is functionnal

--- a/03 - Projects/Project3/Maranta Leuconeura/index.html
+++ b/03 - Projects/Project3/Maranta Leuconeura/index.html
@@ -15,12 +15,11 @@
 
   <!-- My script(s) -->
   <script src="js/NightSky.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/script.js"></script>
 </head>
 
 <body>
-  <!-- HTML would go here if needed. -->
-  Test
+
 </body>
 
 </html>
