--- a/03 - Projects/Project3/Maranta Leuconeura/index.html
+++ b/03 - Projects/Project3/Maranta Leuconeura/index.html
@@ -14,6 +14,9 @@
   <script src="js/libraries/p5.dom.min.js"></script>
 
   <!-- My script(s) -->
+
+  <script src="js/timeFrames.js"></script>
+  <script src="js/Rain.js"></script>
   <script src="js/NightSky.js"></script>
   <script src="js/script.js"></script>
 </head>
