First night is displaying correctly through the loop

--- a/03 - Projects/Project3/Maranta Leuconeura/index.html
+++ b/03 - Projects/Project3/Maranta Leuconeura/index.html
@@ -17,7 +17,7 @@
 
   <script src="js/timeFrames.js"></script>
   <script src="js/Rain.js"></script>
-  <script src="js/NightSky.js"></script>
+  <script src="js/Night.js"></script>
   <script src="js/script.js"></script>
 </head>
 
