--- a/03 - Projects/Project3/Maranta Leuconeura/index.html
+++ b/03 - Projects/Project3/Maranta Leuconeura/index.html
@@ -16,6 +16,7 @@
   <!-- My script(s) -->
 
   <script src="js/timeFrames.js"></script>
+  <script src="js/Sun.js"></script>
   <script src="js/Rain.js"></script>
   <script src="js/Night.js"></script>
   <script src="js/script.js"></script>
