--- a/03 - Projects/Project3/Maranta Leuconeura/index.html
+++ b/03 - Projects/Project3/Maranta Leuconeura/index.html
@@ -15,7 +15,10 @@
 
   <!-- My script(s) -->
 
-  <script src="js/timeFrames.js"></script>
+  <script src="js/TimeFrames.js"></script>
+  <script src="js/Snow.js"></script>
+  <script src="js/Snowflake1.js"></script>
+  <script src="js/Snowflake2.js"></script>
   <script src="js/Sun.js"></script>
   <script src="js/Rain.js"></script>
   <script src="js/Night.js"></script>
