--- a/03 - Projects/Project3/Maranta Leuconeura/index.html
+++ b/03 - Projects/Project3/Maranta Leuconeura/index.html
@@ -16,6 +16,7 @@
   <!-- My script(s) -->
 
   <script src="js/TimeFrames.js"></script>
+  <script src="js/Player.js"></script>
   <script src="js/Humidity.js"></script>
   <script src="js/Plant.js"></script>
   <script src="js/Snow.js"></script>
