--- a/03 - Projects/Project3/Maranta Leuconeura/index.html
+++ b/03 - Projects/Project3/Maranta Leuconeura/index.html
@@ -17,6 +17,7 @@
 
   <script src="js/TimeFrames.js"></script>
   <script src="js/Player.js"></script>
+  <script src="js/WaterBar.js"></script>
   <script src="js/Humidity.js"></script>
   <script src="js/Plant.js"></script>
   <script src="js/Snow.js"></script>
